# builder-os

./: README.md  package.json  pnpm-lock.yaml
.cursor/rules/: product-context.mdc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  secrets.rs
src-tauri/src/commands/: cursor.rs  figma.rs  filesystem.rs  github.rs  mcp.rs  mod.rs  notion.rs  openai.rs  project.rs  shell.rs
src-tauri/src/db/: mod.rs  schema.sql
src/app/: App.tsx  router.tsx
src/app/layout/: AppShell.tsx  Sidebar.tsx
src/components/: GlobalLoadingOverlay.tsx  WindowDragRegion.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  tabs.tsx
src/features/agents/: AgentJobsPanel.tsx
src/features/deliverables/: DeliverableEditorDialog.tsx  DeliverablesPage.tsx  QAPage.tsx
src/features/integrations/: ConnectToolsPage.tsx  NotionSyncSetup.tsx  ProjectIntegrationsPage.tsx
src/features/product-brain/: ProductBrainPage.tsx
src/features/projects/: DashboardPage.tsx  ProjectWizardPage.tsx  ProjectsPage.tsx  WelcomePage.tsx
src/features/screens/: ImportScreensButton.tsx  RetestDialog.tsx  ScreenDetailPage.tsx  (+4 more)
src/lib/: cursor-agent-events.ts  notion-screen-sync.ts  notion-sync.ts  screen-hub.ts  screen-import.ts  tauri-commands.ts
src/stores/: useActivityLogStore.ts  useAgentJobsStore.ts  useAgentStore.ts  useDeliverablesStore.ts  useIntegrationStore.ts  useLoadingStore.ts  useProjectStore.ts  useScreensStore.ts  useWorkflowStore.ts
src/styles/: globals.css
src/types/: integrations.ts  product-brain.ts  workflow.ts
(+8 files in other folders)
